# kernle

./: .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  commerce-audit.md  commerce-progress.md  commerce-security-audit.md  commerce-security-fixes.md  commerce-security-verification.md  mint.json  pyproject.toml
.claude/: settings.json
.claude/agents/: junior-developer.md  security-auditor.md
.github/workflows/: backend.yml  publish.yml  security.yml  test.yml
audit/: SUMMARY.md  export-cache-audit.md  quality-features.md  security-commerce.md  security-core.md  storage-integrity.md
audit/adversarial-v2/: UNIFIED-REPORT.md  report-architecture.md  report-correctness.md  report-security-payments.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  run_migration.py
backend/app/: auth.py  config.py  database.py  embeddings.py  logging_config.py  main.py  models.py  rate_limit.py
backend/docs/: API.md
backend/tests/: conftest.py  test_admin.py  test_admin_health_stats.py  test_api_keys.py  test_auth.py  test_commerce_routes.py  test_health.py  test_integration.py  test_memories.py  test_quota_cache.py  test_subscription_integration.py  test_sync_reembedding.py  test_usage.py
dev/: SETUP.md  dashboard.py
docs/: AISD_INTEGRATION.md  ANXIETY_TRACKING.md  ARCHITECTURE_DIAGRAMS.md  BETTIK_ARCHITECTURE.md  BOOT_LAYER_SPEC.md  CLOUD_PAYMENTS_SPEC.md  COMMERCE_INTEGRATION_PLAN.md  COMMS_PACKAGE_SPEC.md  IDENTITY_COHERENCE.md  KLEROS_INTEGRATION.md  MEMORY_MODEL.md  MEMORY_PRIVACY_SPEC.md  MEMORY_PROVENANCE.md  OPENCLAW_LIFECYCLE.md  PROVENANCE_SPEC.md  PYTHON_API.md  RAW_MEMORY_LAYER.md  ROADMAP.md  SCHEMA.md  SECURITY_AUDIT_V024.md  SEED_BELIEFS.md  SETUP.md  STACK_ARCHITECTURE.md  SYNC_PROTOCOL.md  TESTING_AUDIT.md  architecture.md  boot-config.md  capabilities.md  kernle-cloud-payments-spec.md  migration-tools-to-boot.md  openclaw-integration.md  seamless-transitions.md
docs-site/: architecture.mdx  introduction.mdx  mint.json  quickstart.mdx
docs-site/api-reference/: authentication.mdx  commerce.mdx  embeddings.mdx  overview.mdx  search.mdx  subscriptions.mdx  sync.mdx
docs-site/cli/: additional-commands.mdx  memory-commands.mdx  overview.mdx  sync-commands.mdx  utility-commands.mdx
docs-site/commerce/: jobs.mdx  overview.mdx  payment-verification.mdx  skills.mdx  testnet.mdx  wallets.mdx
docs-site/concepts/: consolidation.mdx  identity.mdx  memory-model.mdx  memory-types.mdx  privacy.mdx  provenance.mdx  security.mdx  stacks.mdx
docs-site/design/: philosophy.mdx  roadmap.mdx
docs-site/features/: corpus-seeding.mdx  dev-dashboard.mdx  diagnostics.mdx  epochs.mdx  identity.mdx  memory-management.mdx  narratives.mdx  psychology.mdx  subscriptions.mdx  summaries.mdx  trust.mdx
docs-site/integration/: choosing.mdx  claude-code.mdx  claude-desktop.mdx  clawdbot.mdx  mcp.mdx  openclaw.mdx
docs-site/protocol/: components.mdx  core.mdx  discovery.mdx  models.mdx  overview.mdx  plugins.mdx  stack.mdx
docs-site/troubleshooting/: context-overload.mdx  upgrading.mdx
docs/architecture/: memory-integrity.md
docs/archive/: COMMS_PACKAGE.md  GEMINI_SECURITY_AUDIT_2026-01-31.md
docs/design/: COMMS_PACKAGE.md
docs/proposals/: kernle-enhancement-proposal-v2.md  kernle-enhancement-proposal-v3.md
docs/specs/: PROVENANCE.md
hooks/clawdbot/: HOOK.md  README.md  handler.ts  pre-compact-handler.ts
integrations/claude-code/: README.md
integrations/openclaw/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
kernle/: __init__.py  anxiety_core.py  core.py  corpus.py  dedup.py  discovery.py  entity.py  exhaust.py  inference.py  lint.py  logging_config.py  processing.py  protocols.py  structural.py  types.py  utils.py
kernle/cli/: __main__.py
migrations/: 001_initial_schema.sql  002_gin_indexes.sql  003_rename_agent_to_stack.sql
scripts/: audit_findings_index_validate.py  audit_roadmap_validate.py
skill/: SKILL.md
tests/: conftest.py  test_anxiety.py  test_anxiety_calibration.py  test_anxiety_component_raw_aging.py  test_anxiety_core.py  test_anxiety_coverage.py  test_atomic_update_methods.py  test_auth_http_block.py  test_auto_model.py  test_belief_revision.py  test_belief_scope.py  test_belief_type_consistency.py  test_beliefs_crud.py  test_boot_config.py  test_budget_loading.py  test_checkpoint_strict.py  test_cli.py  test_cli_anxiety.py  test_cli_audit_command.py  test_cli_belief.py  test_cli_dispatch_coverage.py  test_cli_doctor.py  test_cli_emotion.py  test_cli_entity.py  test_cli_epoch_coverage.py  test_cli_forget.py  test_cli_hook.py  test_cli_identity.py  test_cli_init_command.py  test_cli_integration.py  test_cli_main_coverage.py  test_cli_memory_command.py  test_cli_meta.py  test_cli_migrate_command.py  test_cli_model.py  test_cli_process_exhaust.py  test_cli_provenance.py  test_cli_raw.py  test_cli_seed_command.py  test_cli_setup.py  (+145 more)
web/: package-lock.json  package.json
(+267 files in other folders)
