[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernle"
version = "0.1.0"
description = "Stratified memory for synthetic intelligences"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Emergent Instruments", email = "hello@emergentinstruments.com" },
    { name = "Claire", email = "claire@emergentinstruments.com" },
]
keywords = [
    "ai",
    "memory",
    "agents",
    "llm",
    "mcp",
    "claude",
    "synthetic-intelligence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
kernle = "kernle.cli.__main__:main"

[project.urls]
Homepage = "https://kernle.ai"
Documentation = "https://docs.kernle.ai"
Repository = "https://github.com/Emergent-Instruments/kernle"
Issues = "https://github.com/Emergent-Instruments/kernle/issues"

[tool.hatch.build.targets.wheel]
packages = ["kernle"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
