[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernle"
version = "0.13.08"
description = "Stratified memory for synthetic intelligences"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Emergent Instruments", email = "hello@emergentinstruments.com" },
    { name = "Claire", email = "claire@emergentinstruments.com" },
]
keywords = [
    "ai",
    "memory",
    "stacks",
    "llm",
    "mcp",
    "claude",
    "synthetic-intelligence",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "sqlite-vec>=0.1.0",  # Required for semantic search
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mcp>=1.0.0",  # Required for test_mcp.py
]
mcp = [
    "mcp>=1.0.0",
]
# Local storage with vector search
local = [
    "sqlite-vec>=0.1.0",
]
# Cloud storage with Supabase
cloud = [
    "supabase>=2.0.0",
]
anthropic = ["anthropic>=0.40.0"]
ollama = ["requests>=2.28.0"]
# All features
all = [
    "kernle[local,cloud,mcp,anthropic,ollama]",
]

[project.scripts]
kernle = "kernle.cli.__main__:main"
kernle-mcp = "kernle.mcp.server:main"

# Entry point groups for plugin/component discovery.
# External packages register here; these are empty placeholders.
[project.entry-points."kernle.plugins"]

[project.entry-points."kernle.stacks"]

[project.entry-points."kernle.models"]
anthropic = "kernle.models.anthropic:AnthropicModel"
ollama = "kernle.models.ollama:OllamaModel"

[project.entry-points."kernle.stack_components"]
embedding = "kernle.stack.components.embedding:EmbeddingComponent"
forgetting = "kernle.stack.components.forgetting:ForgettingComponent"
consolidation = "kernle.stack.components.consolidation:ConsolidationComponent"
emotions = "kernle.stack.components.emotions:EmotionalTaggingComponent"
anxiety = "kernle.stack.components.anxiety:AnxietyComponent"
suggestions = "kernle.stack.components.suggestions:SuggestionComponent"
metamemory = "kernle.stack.components.metamemory:MetaMemoryComponent"
knowledge = "kernle.stack.components.knowledge:KnowledgeComponent"

[project.urls]
Homepage = "https://kernle.ai"
Documentation = "https://docs.kernle.ai"
Repository = "https://github.com/Emergent-Instruments/kernle"
Issues = "https://github.com/Emergent-Instruments/kernle/issues"

[tool.hatch.build.targets.wheel]
packages = ["kernle"]

[tool.hatch.build.targets.sdist]
include = [
    "kernle/",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 85

[tool.pytest.ini_options]
xfail_strict = true
markers = [
    "stub: marks tests that verify stub behavior (will need replacement with integration tests)",
]
